The project is almost done

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2 class="card-title">Shoes!</h2>
             <p>At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.</p>
             <div class="card-actions justify-end">
-              <button class="btn">Buy Now</button>
+              <button class="btn outline-none">Buy Now</button>
             </div>
           </div>
         </div>
@@ -108,25 +108,131 @@
       </div>
     </section>
     <!-- purchase section start -->
-    
+    <section class="max-w-screen-xl mx-auto mt-20">
+      <div class="flex flex-col px-5 xl:px-0 xl:flex-row items-center gap-12">
+        <div class="flex-1">
+          <h3 class="text-4xl font-semibold">Easy Purchase</h3>
+          <p class="mt-4 xl:pr-20 text-base">we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.Our mission is to provide you with a diverse and trendy collection.</p>
+        </div>
+        <div class="flex-1">
+          <img src="./images/easy-purchase.avif" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- Top product function -->
+    <section class="max-w-screen-xl mx-auto mt-24">
+      <h2 class="text-center text-4xl font-bold">Top Product</h2>
+      <p class="text-center mt-2">Browse from a various collections</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 px-5 xl:px-5 mt-16 gap-5">
+        <!-- single top banner section -->
+        <div class="card card-compact shadow-xl">
+          <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal Shirt</h2>
+            <p class="mt-1">Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end mt-2">
+              <button class="btn border-t-stone-400">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- single top banner section 2 -->
+        <div class="card card-compact shadow-xl">
+          <figure><img src="./images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal shoe</h2>
+            <p class="mt-1">Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end mt-2">
+              <button class="btn border-t-stone-400">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- single top banner section 3 -->
+        <div class="card card-compact shadow-xl">
+          <figure><img src="./images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal Shirt</h2>
+            <p class="mt-1">Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end mt-2">
+              <button class="btn border-t-stone-400">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- single top banner section 4 -->
+        <div class="card card-compact shadow-xl">
+          <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Casual Shirt</h2>
+            <p class="mt-1">Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end mt-2">
+              <button class="btn border-t-stone-400">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- single end -->
+      </div>
+    </section>
+    <!-- faq section -->
+    <section class="mt-24 max-w-screen-xl mx-auto">
+      <h2 class="text-center text-4xl font-bold">Frequently Asked Questions</h2>
+      <p class="text-center mt-2">Browse from a various collections</p>
+      <div class="mt-10 px-5 xl:px-0">
+        <!-- single accordian -->
+        <div class="collapse collapse-plus bg-base-200 my-5">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+           How can I purchase
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <!-- signle accorian has life  -->
+        <div class="collapse collapse-plus bg-base-200 my-5">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            What the delivery system
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 my-5">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            What's the delivery system
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  <!-- footer section data -->
+  <footer class="bg-neutral text-neutral-content mt-24">
+    <div class="footer p-10 max-w-screen-xl mx-auto">
+      <div>
+        <span class="footer-title">Services</span> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </div> 
+      <div>
+        <span class="footer-title">Company</span> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </div> 
+      <div>
+        <span class="footer-title">Legal</span> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
